--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,15 +9,40 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"></script>
-    <img src="cat2.jpg">
+    <video playsinline autoplay></video>
+    <button>Take snapshot</button>
+    <canvas></canvas>
     <script>
-    img = document.querySelector('img');
+      video = document.querySelector('video');
+canvas = document.querySelector('canvas');
+button = document.querySelector('button');
+
+button.onclick = function() {
+  canvas.width = video.videoWidth;
+  canvas.height = video.videoHeight;
+  canvas.getContext('2d').drawImage(video, 0, 0, video.videoWidth, video.videoHeight);
     mobilenet.load().then(model => {
-      model.classify(img).then(predictions => {
+      model.classify(canvas).then(predictions => {
         alert(predictions[0].className + ': ' + predictions[0].probability);
         console.log(predictions);
       });
     });
+};
+
+constraints = {
+  audio: false,
+  video: true
+};
+
+function handleSuccess(stream) {
+  video.srcObject = stream;
+}
+
+function handleError(error) {
+  alert('navigator.MediaDevices.getUserMedia error: ' + error.message + error.name);
+}
+
+navigator.mediaDevices.getUserMedia(constraints).then(handleSuccess).catch(handleError);
     </script>
   </body>
 </html>
